styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  }
  /* Common Rules ------------------------------------------ */
  .margin-left-10 { margin-left: 10px; }
  .margin-left-20 { margin-left: 20px; }
  .margin-left-30 { margin-left: 30px; }
  .margin-top-10 { margin-top: 10px; }
  .margin-top-20 { margin-top: 20px; }
  .margin-top-30 { margin-top: 30px; }
  .margin-bottom-30 { margin-bottom: 30px; }
  .padding-top-10 { padding-top: 10px; }
  .padding-top-20 { padding-top: 20px; }
  .padding-top-30 { padding-top: 30px; }
  .no-underline { text-decoration: none; color: white; }
  .no-underline:hover { color: yellow; }

  body {
  font-family: 'Montserrat', sans-serif;
  color: white;
  background: black;
  margin: 2em;
  }

  p {
    color: #ccc;
    font-size: 14px;
    line-height: 1.6;
  }

  p:hover {
    animation-name: yellowHover;
    animation-duration: 15s;
  }

  .responsive {
    width: 100%;
    height: auto;
  }

  /* Declare the Grid Area ---------------------------------- */
.item1 { grid-area: header; }
.item2 { grid-area: menu; }
.item3 { grid-area: main; }
.item4 { grid-area: right; }
.item5 { grid-area: footer; }


/* DEFINES the GRID CONTAINER / the entire page layout ------------------ */
.grid-container {
  display: grid;
  grid-template-areas:
   'header header menu menu menu menu'
   'main main main main right right'
   'footer footer footer footer footer footer';
  grid-gap: 10px;
  }

  .grid-container > div {
  padding: 20px 0;
  font-size: 30px;
  }

  /* Header -------------------------------------------------- */
  .item1 {
  border-bottom: 1px solid #ccc;
  }

  .logo {
  position: relative;
  animation-name: fadeInLeft;
  animation-duration: 1s;
  }

  /* Menu ---------------------------------------------------- */
  .item2 {
    border-bottom: 1px solid #ccc;;
    }
    ul {
    display: flex;
    justify-content: flex-end;
    list-style-type: none;
    font-size: 18px;
    margin-top: 30px;
    }

    li { margin: 10px; }

li a {
text-decoration: none;
color: white;
}

li a:hover {
color: gray;
}

/* Main ---------------------------------------------------- */
.item3 {
  margin: 0 1rem 0 0;
  }
  .content:hover {
  position: relative;
  animation-name: hoverState;
  animation-duration: 2s;
  }

  /* Right -------------------------------------------------- */
.item4 {
  width: 20rem;
  border-left: 1px dotted #ccc;
  }

  /* Footer ------------------------------------------------- */
.item5 {
  height: 100px;
border-top: 1px solid #ccc;
}

.mysite {
text-decoration: none;
color: gray;
}

.mysite:hover {
color: yellow;
}

.social {
  margin-top: -70px;
  }

  .social-icon {
  border-radius: 50%;
  }

  .view-more {
  text-decoration: none;
  color: white;
  }

  .view-more:hover {
    color: gray;
    }

    /* Media Queries for Mobile ---------------------------- */
@media (max-width: 700px) {
.grid-container {
 grid-template-areas:
 'menu'
 'header'
 'main'
 'right'
 'footer'
}

.social {
  display: flex;
  flex-direction: row;
  list-style-type: none;
  font-size: 18px;
  align-content: center;
  justify-content: center;
 }

 ul {
  display: flex;
  justify-content: flex-start;
 }

 .item4 {
  width: 100%;
  border: none;
  border-top: 1px dotted #ccc;
 }

 .clear-margin {
  margin: 0;
 }

 .social {
  margin-top: 1%;
 }

 .no-margin { margin: 0; }
 }

 @media (min-width: 1280px) {
  .item3 div {
   display: flex;
   flex-direction: row;
  }
  .img-third-col {
   width: 40%;
   /* margin-right: 100px; */
   margin-right: 5rem;
   margin-bottom: 50px;
  }

  .one-third-col {
    width: 40%;
    border-right: 1px dotted #ccc;
    margin-right: 100px;
    margin-bottom: 30px;
   }

   .item3 div .max-row-600 {
    width: 600px;
    padding-bottom: 30px;
   }

   item4 {
    width: 30rem;
   }
   .lg-margin-60 { margin-left: 60px; }
   }
   /* Keyframe Animations ------------------------------------ */
   @keyframes fadeInLeft {
    0% { color: #ccc; left:-100px; }
    50% { color: #ccc; left:15px; }
    100% { color: #ccc; left:0px; }
    }

    @keyframes hoverState {
    0% { color: yellow; }
    50% { color: yellow; }
    100% { color: yellow; }
    }

    @keyframes yellowHover {
    0% { color: yellow; }
    50% { color: yellow; }
    100% { color: yellow; }
    }

